<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/group_main">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_bookmarks"
            android:title="@string/nav_bookmarks" />
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/group_other">
        <item android:id="@+id/nav_change_theme"
            android:title="@string/change_theme" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />
    </group>
</menu>